Added details on failed "runtimetests"

--- a/src/SamplesApp/SamplesApp.UnitTests.Shared/Controls/UnitTest/UnitTestsControl.xaml
+++ b/src/SamplesApp/SamplesApp.UnitTests.Shared/Controls/UnitTest/UnitTestsControl.xaml
@@ -23,6 +23,7 @@
 			  Click="OnRunTests" />
 	  <TextBlock x:Name="runStatus"
 				 Text="Not initialized" />
+	  <TextBlock x:Name="failedTestDetails" Opacity="0.1" />
 	  <TextBlock x:Name="failedTests" Text="Pending..." />
 	</StackPanel>
 	<ScrollViewer Grid.Row="1">
