--- a/src/SamplesApp/SamplesApp.UnitTests.Shared/Controls/UnitTest/UnitTestsControl.xaml
+++ b/src/SamplesApp/SamplesApp.UnitTests.Shared/Controls/UnitTest/UnitTestsControl.xaml
@@ -23,7 +23,7 @@
 			  Click="OnRunTests" />
 	  <TextBlock x:Name="runStatus"
 				 Text="Not initialized" />
-	  <TextBlock x:Name="failedTestDetails" Opacity="0.1" />
+	  <TextBlock x:Name="failedTestDetails" Opacity="0.1" MaxHeight="20" />
 	  <TextBlock x:Name="failedTests" Text="Pending..." />
 	</StackPanel>
 	<ScrollViewer Grid.Row="1">
@@ -31,7 +31,7 @@
 	  </StackPanel>
 	</ScrollViewer>
 	<ScrollViewer  Grid.Column="1" Grid.RowSpan="2">
-	  <ContentControl x:Name="unitTestContentRoot" HorizontalContentAlignment="Center" VerticalAlignment="Center" />
+	  <ContentControl x:Name="unitTestContentRoot" HorizontalContentAlignment="Center" VerticalAlignment="Center" MinWidth="1600" MinHeight="1600" />
 	</ScrollViewer>
   </Grid>
 </UserControl>
