Fixed TextBox natural width. Previous implementation was using the "MeasureView", but on HTML, it won't grow following its content.

--- a/src/SamplesApp/UITests.Shared/Windows_UI_Xaml_Controls/TextBox/TextBox_NaturalSize.xaml
+++ b/src/SamplesApp/UITests.Shared/Windows_UI_Xaml_Controls/TextBox/TextBox_NaturalSize.xaml
@@ -13,7 +13,7 @@
 			So it should be the same width as the red rectangle and the same height than the blue rectangle.
 		</TextBlock>
 		<Rectangle Width="64" Height="9" Fill="Red" HorizontalAlignment="Left" Margin="9,0,0,0" x:Name="recth" />
-		<StackPanel Orientation="Horizontal" VerticalAlignment="Top">
+		<StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
 			<Rectangle Width="9" Height="32" Fill="Blue" VerticalAlignment="Top" x:Name="rectv" />
 			<StackPanel>
 				<TextBox x:Name="textbox_sut" />
